Fix grading bar overlap on mobile.

--- a/app/components/study/prompt/MobileStudyPromptComponent.scss
+++ b/app/components/study/prompt/MobileStudyPromptComponent.scss
@@ -70,7 +70,7 @@ gelato-component[data-name='mobile-study-prompt'] {
         }
 
         #toolbar-grading-container {
-          bottom: -30px;
+          bottom: -15px;
           left: 0;
           position: absolute;
           width: 100%;
